--- a/Pos/res/layout/product_iteminfo.xml
+++ b/Pos/res/layout/product_iteminfo.xml
@@ -18,7 +18,7 @@
             android:id="@+id/product_itemId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="productCode" />
 
     </LinearLayout>
 
@@ -36,7 +36,7 @@
             android:id="@+id/product_item_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="name" />
 
     </LinearLayout>
 
@@ -54,13 +54,13 @@
             android:id="@+id/sale_report_productTextView"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:text="Cost :" />
+            android:text="Type :" />
 
         <TextView
-            android:id="@+id/product_itemCost"
+            android:id="@+id/product_item_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="type" />
 
     </LinearLayout>
 
@@ -78,9 +78,21 @@
             android:id="@+id/product_itemPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="price" />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/TextView02"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:text="Barcode :" />
+
+    <TextView
+        android:id="@+id/product_itemBarcode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="barcode" />
 
     <LinearLayout
         android:layout_width="match_parent"
