--- a/Pos/res/layout/large_item_layout.xml
+++ b/Pos/res/layout/large_item_layout.xml
@@ -9,10 +9,20 @@
         android:layout_height="wrap_content" >
 
         <TextView
+            android:id="@+id/large_item_layout_product_code"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="code"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="#000000"
+            android:textColorHint="#000000"
+            android:textColorLink="#000000" />
+
+        <TextView
             android:id="@+id/large_text_item"
             android:layout_width="170dp"
             android:layout_height="wrap_content"
-            android:text="Large Text"
+            android:text="name"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="#000000"
             android:textColorHint="#000000"
@@ -26,7 +36,7 @@
 
         <TextView
             android:id="@+id/large_text_quantity"
-            android:layout_width="200dp"
+            android:layout_width="151dp"
             android:layout_height="wrap_content"
             android:text="TextView"
             android:textColor="#000000"
