--- a/Pos/res/layout/large_item_layout.xml
+++ b/Pos/res/layout/large_item_layout.xml
@@ -30,7 +30,7 @@
 
         <TextView
             android:id="@+id/sale_report_productTextView"
-            android:layout_width="70dip"
+            android:layout_width="28dp"
             android:layout_height="wrap_content"
             android:text="" />
 
